# sdkwork-audio

./: AGENTS.md  Cargo.toml  README.md  package.json  pnpm-workspace.yaml  sdkwork.app.config.json  tsconfig.json  vitest.config.ts
.sdkwork/: README.md
apis/: README.md
apis/app-api/audio/: openapi.yaml
apis/backend-api/audio/: openapi.yaml
apps/: README.md
configs/: README.md
configs/environments/: development.env  production.env
crates/: README.md
crates/sdkwork-api-audio-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-api-audio-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-audio-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-api-audio-standalone-gateway/: Cargo.toml
crates/sdkwork-api-audio-standalone-gateway/specs/: component.spec.json
crates/sdkwork-api-audio-standalone-gateway/src/: main.rs
crates/sdkwork-audio-ai-engine-rust/: Cargo.toml
crates/sdkwork-audio-ai-engine-rust/src/: lib.rs
crates/sdkwork-audio-artifact-drive-service/: Cargo.toml
crates/sdkwork-audio-artifact-drive-service/src/: lib.rs
crates/sdkwork-audio-database-host/: Cargo.toml
crates/sdkwork-audio-database-host/src/: lib.rs
crates/sdkwork-audio-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-audio-gateway-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-audio-generation-repository-sqlx/: Cargo.toml
crates/sdkwork-audio-generation-repository-sqlx/migrations/: 0001_audio_core.sql
crates/sdkwork-audio-generation-repository-sqlx/src/: bootstrap.rs  lib.rs  models.rs
crates/sdkwork-audio-generation-repository-sqlx/src/entities/: artifact.rs  event.rs  mod.rs  provider.rs  task.rs  voice.rs
crates/sdkwork-audio-generation-repository-sqlx/src/repositories/: artifact.rs  event.rs  mod.rs  task.rs  voice.rs
crates/sdkwork-audio-realtime-rust/: Cargo.toml
crates/sdkwork-audio-realtime-rust/src/: lib.rs
crates/sdkwork-audio-sound-effect-generation-service/: Cargo.toml  README.md
crates/sdkwork-audio-sound-effect-generation-service/specs/: component.spec.json
crates/sdkwork-audio-sound-effect-generation-service/src/: lib.rs  service.rs
crates/sdkwork-audio-sound-effect-generation-service/tests/: provider_service_standard.rs
crates/sdkwork-audio-sound-effect-mcp-service/: Cargo.toml  README.md
crates/sdkwork-audio-sound-effect-mcp-service/specs/: README.md  component.spec.json
crates/sdkwork-audio-sound-effect-mcp-service/src/: catalog.rs  dto.rs  error.rs  handler.rs  lib.rs  transport.rs
crates/sdkwork-audio-sound-effect-mcp-service/tests/: mcp_contract_standard.rs
crates/sdkwork-audio-sound-effect-provider-adapter/: Cargo.toml  README.md
crates/sdkwork-audio-sound-effect-provider-adapter/specs/: component.spec.json
crates/sdkwork-audio-sound-effect-provider-adapter/src/: adapter.rs  lib.rs  requests.rs
crates/sdkwork-audio-sound-effect-provider-adapter/tests/: provider_adapter_standard.rs
crates/sdkwork-audio-sound-effect-provider-spi/: Cargo.toml  README.md
crates/sdkwork-audio-sound-effect-provider-spi/specs/: component.spec.json
crates/sdkwork-audio-sound-effect-provider-spi/src/: error.rs  lib.rs  model.rs  provider.rs  registry.rs
crates/sdkwork-audio-sound-effect-service/: Cargo.toml
crates/sdkwork-audio-sound-effect-service/src/: error.rs  lib.rs  models.rs  service.rs
crates/sdkwork-audio-speech-service/: Cargo.toml
crates/sdkwork-audio-speech-service/src/: error.rs  lib.rs  models.rs  service.rs
crates/sdkwork-audio-speech-service/tests/: error_test.rs  models_test.rs  service_test.rs
crates/sdkwork-audio-transcription-service/: Cargo.toml
crates/sdkwork-audio-transcription-service/src/: error.rs  lib.rs  models.rs  service.rs
crates/sdkwork-audio-translation-service/: Cargo.toml
crates/sdkwork-audio-translation-service/src/: error.rs  lib.rs  models.rs  service.rs
crates/sdkwork-router-audio-app-api/: Cargo.toml
crates/sdkwork-router-audio-app-api/src/: lib.rs
crates/sdkwork-router-audio-backend-api/: Cargo.toml
crates/sdkwork-router-audio-backend-api/src/: lib.rs
crates/sdkwork-routes-audio-app-api/: Cargo.toml
crates/sdkwork-routes-audio-app-api/specs/: component.spec.json
crates/sdkwork-routes-audio-app-api/src/: lib.rs
crates/sdkwork-routes-audio-backend-api/: Cargo.toml
crates/sdkwork-routes-audio-backend-api/specs/: component.spec.json
crates/sdkwork-routes-audio-backend-api/src/: lib.rs
database/: README.md  database.manifest.json
database/contract/: prefix-registry.json  schema.yaml  table-registry.json
database/seeds/common/: 001_bootstrap.sql
deployments/: README.md
deployments/docker/: Dockerfile  docker-compose.yml
deployments/k8s/: deployment.yaml
deployments/nginx/: nginx.conf
docs/: ALIGNMENT_REPORT.md  API_DESIGN.md  AUDIO_APP_DESIGN_REPORT.md  CORE_SERVICES_SUMMARY.md  DATABASE_DESIGN.md  FINAL_SUMMARY.md  INDEX.yaml  PROJECT_COMPLETION_REPORT.md  README.md  SDK_DESIGN.md  SOUND_EFFECT_SERVICE_IMPLEMENTATION.md  SPEECH_SERVICE_IMPLEMENTATION.md  TRANSCRIPTION_SERVICE_IMPLEMENTATION.md  TRANSLATION_SERVICE_IMPLEMENTATION.md
docs/architecture/decisions/: ADR-20260614-audio-app-architecture.md  ADR-20260719-sound-effect-provider-spi.md
docs/architecture/tech/: TECH-alignment-report.md  TECH-api-design.md  TECH-audio-app-design-report.md  TECH-core-services-summary.md  TECH-database-design.md  TECH-final-summary.md  TECH-project-completion-report.md  TECH-sdk-design.md  (+5 more)
examples/: README.md
jobs/: README.md
plugins/: README.md
scripts/: README.md  generate-sdk.ps1  test-speech-service.ps1  verify.ps1
sdks/: README.md
sdks/sdkwork-audio-app-sdk/: .sdkwork-assembly.json  README.md  sdk-manifest.json
sdks/sdkwork-audio-backend-sdk/: .sdkwork-assembly.json  README.md  sdk-manifest.json
specs/: README.md  component.spec.json
tests/: README.md
tests/contract/: audio-api.contract.test.ts  database-migration.contract.test.ts  rust-crates.contract.test.ts  sdk-generation.contract.test.ts
tools/: README.md  materialize_audio_database_contract.mjs
(+13 files in other folders)
