[workspace]
resolver = "2"
members = [
    "crates/sdkwork-audio-gateway-assembly",
    "crates/sdkwork-audio-database-host",
    "crates/sdkwork-routes-audio-app-api",
    "crates/sdkwork-routes-audio-backend-api",
    "crates/sdkwork-audio-artifact-drive-service",
    "crates/sdkwork-audio-generation-repository-sqlx",
    "crates/sdkwork-audio-realtime-rust",
    "crates/sdkwork-audio-ai-engine-rust",
    "crates/sdkwork-audio-speech-service",
    "crates/sdkwork-audio-transcription-service",
    "crates/sdkwork-audio-translation-service",
    "crates/sdkwork-audio-sound-effect-service",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
async-trait = "0.1"
sdkwork-drive-config = { path = "../sdkwork-drive/crates/sdkwork-drive-config" }
sdkwork-drive-storage-contract = { path = "../sdkwork-drive/crates/sdkwork-drive-storage-contract" }
sdkwork-drive-storage-local = { path = "../sdkwork-drive/crates/sdkwork-drive-storage-local" }
sdkwork-drive-workspace-service = { path = "../sdkwork-drive/crates/sdkwork-drive-workspace-service" }
sdkwork-routes-audio-app-api = { path = "crates/sdkwork-routes-audio-app-api" }
sdkwork-routes-audio-backend-api = { path = "crates/sdkwork-routes-audio-backend-api" }
sdkwork-audio-artifact-drive-service = { path = "crates/sdkwork-audio-artifact-drive-service" }
sdkwork-audio-generation-repository-sqlx = { path = "crates/sdkwork-audio-generation-repository-sqlx" }
sdkwork-audio-realtime-rust = { path = "crates/sdkwork-audio-realtime-rust" }
sdkwork-audio-ai-engine-rust = { path = "crates/sdkwork-audio-ai-engine-rust" }
sdkwork-audio-speech-service = { path = "crates/sdkwork-audio-speech-service" }
sdkwork-audio-transcription-service = { path = "crates/sdkwork-audio-transcription-service" }
sdkwork-audio-translation-service = { path = "crates/sdkwork-audio-translation-service" }
sdkwork-audio-sound-effect-service = { path = "crates/sdkwork-audio-sound-effect-service" }
sdkwork-audio-database-host = { path = "crates/sdkwork-audio-database-host" }
sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config", package = "sdkwork-database-config" }
sdkwork-database-lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle", package = "sdkwork-database-lifecycle" }
sdkwork-database-spi = { path = "../sdkwork-database/crates/sdkwork-database-spi", package = "sdkwork-database-spi" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx", package = "sdkwork-database-sqlx" }
sdkwork_database_config = { path = "../sdkwork-database/crates/sdkwork-database-config", package = "sdkwork-database-config" }
sdkwork_database_lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle", package = "sdkwork-database-lifecycle" }
sdkwork_database_spi = { path = "../sdkwork-database/crates/sdkwork-database-spi", package = "sdkwork-database-spi" }
sdkwork_database_sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx", package = "sdkwork-database-sqlx" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "any", "sqlite", "postgres"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
