[package]
name = "sdkwork-api-audio-assembly"
edition.workspace = true
version.workspace = true
description = "Generated API assembly for sdkwork-audio application HTTP plane."

[lib]
name = "sdkwork_api_audio_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
