[package]
name = "sdkwork-audio-artifact-drive-service"
version = "0.1.0"
edition = "2021"
description = "SDKWork Audio artifact drive service"

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
