[package]
name = "sdkwork-audio-database-host"
edition.workspace = true
version.workspace = true
description = "SDKWork Audio database lifecycle bootstrap."

[lib]
name = "sdkwork_audio_database_host"
path = "src/lib.rs"

[dependencies]
dotenvy = "0.15"
sdkwork_database_config = { workspace = true }
sdkwork_database_lifecycle = { workspace = true }
sdkwork_database_spi = { workspace = true }
sdkwork_database_sqlx = { workspace = true }
