[package]
name = "sdkwork-audio-gateway-assembly"
edition.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-audio application HTTP plane."

[lib]
name = "sdkwork_audio_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
sdkwork_routes_audio_app_api = { package = "sdkwork-routes-audio-app-api", path = "../sdkwork-routes-audio-app-api" }
sdkwork_routes_audio_backend_api = { package = "sdkwork-routes-audio-backend-api", path = "../sdkwork-routes-audio-backend-api" }
