[package]
name = "sdkwork-audio-sound-effect-provider-spi"
version.workspace = true
edition.workspace = true
description = "Transport-neutral provider SPI for SDKWork sound-effect generation."

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror = "2"

[dev-dependencies]
tokio.workspace = true
