[package]
name = "sdkwork-audio-transcription-service"
version = "0.1.0"
edition = "2021"
description = "SDKWork Audio transcription service"

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

# Internal dependencies
sdkwork-audio-generation-repository-sqlx = { path = "../sdkwork-audio-generation-repository-sqlx" }
sdkwork-audio-ai-engine-rust = { path = "../sdkwork-audio-ai-engine-rust" }
sdkwork-audio-artifact-drive-service = { path = "../sdkwork-audio-artifact-drive-service" }

[dev-dependencies]
tokio-test = "0.4"
