[package]
name = "sdkwork-router-audio-backend-api"
version = "0.1.0"
edition = "2021"
description = "SDKWork Audio backend API route definitions"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tokio-test = "0.4"
